--- a/roles/albert/tasks/main.yml
+++ b/roles/albert/tasks/main.yml
@@ -14,6 +14,10 @@
 
 - name: run package helper
   import_tasks: '{{ helper_path }}/package_apt.yml'
+  vars:
+    package_apt_list:
+      install:
+        - 'albert'
 
 - name: run template helper
   import_tasks: '{{ helper_path }}/template.yml'
