--- a/roles/audacity/tasks/main.yml
+++ b/roles/audacity/tasks/main.yml
@@ -7,6 +7,10 @@
 
 - name: run package helper
   import_tasks: '{{ helper_path }}/package_apt.yml'
+  vars:
+    package_apt_list:
+      install:
+        - 'audacity'
 
 - name: run copy helper
   import_tasks: '{{ helper_path }}/copy.yml'
