--- a/roles/calibre/tasks/main.yml
+++ b/roles/calibre/tasks/main.yml
@@ -8,7 +8,7 @@
       - src: 'viewer.py'
         dest: '{{ user_config }}/calibre'
 
-- name: create temporary directory
+- name: run tempfile helper
   import_tasks: '{{ helper_path }}/tempfile.yml'
   vars:
     tempfile_suffix: '.calibre'
@@ -26,7 +26,10 @@
   become: yes
   script: '{{ helper_tempfile_result.path }}/{{ calibre_installer | basename }}'
 
-- name: add entries to mime list
+- name: run mime helper
   import_tasks: '{{ helper_path }}/mime.yml'
   vars:
-    data: '{{ mime_list }}'
+    mime_list:
+      entry_name: 'calibre-ebook-viewer'
+      type:
+        - 'application/epub+zip'
