--- a/roles/chromium/tasks/main.yml
+++ b/roles/chromium/tasks/main.yml
@@ -1,5 +1,10 @@
 - name: run package helper
   import_tasks: '{{ helper_path }}/package_apt.yml'
+  vars:
+    package_apt_list:
+      install_recommends: no
+      install:
+        - 'chromium-browser'
 
 - name: run template helper
   import_tasks: '{{ helper_path }}/template.yml'
