--- a/roles/cmus/tasks/main.yml
+++ b/roles/cmus/tasks/main.yml
@@ -1,5 +1,9 @@
 - name: run package helper
   import_tasks: '{{ helper_path }}/package_apt.yml'
+  vars:
+    package_apt_list:
+      install:
+        - 'cmus'
 
 - name: run template helper
   import_tasks: '{{ helper_path }}/template.yml'
