--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,7 +1,53 @@
 - name: run package helper
   import_tasks: '{{ helper_path }}/package_apt.yml'
+  vars:
+    package_apt_list:
+      install:
+        - 'anki'
+        - 'dconf-editor'
+        - 'htop'
+        - 'hunspell-ru'
+        - 'hunspell'
+        - 'tree'
+      remove:
+        - 'hexchat-common'
+        - 'hexchat'
+        - 'libreoffice-draw'
+        - 'libreoffice-impress'
+        - 'libreoffice-ogltrans'
+        - 'mint-artwork'
+        - 'mint-backgrounds-*'
+        - 'mintreport'
+        - 'mintwelcome'
+        - 'tomboy'
+        # rhythmbox
+        - 'rhythmbox'
+        - 'rhythmbox-data'
+        - 'rhythmbox-plugin-tray-icon'
+        - 'rhythmbox-plugins'
+        - 'librhythmbox-core10'
+        # xplayer
+        - 'xplayer'
+        - 'xplayer-common'
+        - 'xplayer-dbg'
+        - 'xplayer-plugins'
+        - 'libxplayer0'
+        - 'gir1.2-xplayer-1.0'
+        - 'libxplayer-plparser18'
+        - 'gir1.2-xplayer-plparser-1.0'
 
-- name: add entries to mime list
+- name: run mime helper
   import_tasks: '{{ helper_path }}/mime.yml'
   vars:
-    data: '{{ mime_list }}'
+    mime_list:
+      entry_name: 'xviewer'
+      type:
+        - 'image/bmp'
+        - 'image/gif'
+        - 'image/jpeg'
+        - 'image/png'
+        - 'image/svg+xml'
+        - 'image/tiff'
+        - 'image/x-bmp'
+        - 'image/x-ico'
+        - 'image/x-pcx'
