--- a/roles/firefox/tasks/main.yml
+++ b/roles/firefox/tasks/main.yml
@@ -1,9 +1,20 @@
 ---
 - name: run package helper
   import_tasks: '{{ helper_path }}/package_apt.yml'
+  vars:
+    package_apt_list:
+      install:
+        - 'firefox'
+      remove:
+        - 'firefox-locale-en'
 
-- name: add shortcut
+- name: run shortcut helper
   import_tasks: '{{ helper_path }}/shortcut.yml'
+  vars:
+    shortcut_list:
+      - name: "'firefox'"
+        command: "'firefox'"
+        binding: "['<Super>F1']"
 
 - name: run template helper
   import_tasks: '{{ helper_path }}/template.yml'
