--- a/roles/flameshot/tasks/main.yml
+++ b/roles/flameshot/tasks/main.yml
@@ -1,6 +1,10 @@
 ---
 - name: run package helper
   import_tasks: '{{ helper_path }}/package_apt.yml'
+  vars:
+    package_apt_list:
+      install:
+        - 'flameshot'
 
 - name: run copy helper
   import_tasks: '{{ helper_path }}/copy.yml'
@@ -12,7 +16,15 @@
 - name: disable defautl shortcuts
   import_tasks: '{{ helper_path }}/dconf.yml'
   vars:
-    list: '{{ flameshot_settings }}'
+    dconf_list: '{{ flameshot_settings }}'
 
-- name: add shortcut
+- name: run shortcut helper
   import_tasks: '{{ helper_path }}/shortcut.yml'
+  vars:
+    shortcut_list:
+      - name: "'flameshot'"
+        command: "'flameshot full -p {{ user_home }}/Pictures'"
+        binding: "['Print']"
+      - name: "'flameshot select'"
+        command: "'flameshot gui -p {{ user_home }}/Pictures'"
+        binding: "['<Shift>Print']"
