--- a/roles/gnome/tasks/main.yml
+++ b/roles/gnome/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: add settings
+- name: run dconf helper
   import_tasks: '{{ helper_path }}/dconf.yml'
   vars:
-    list: '{{ gnome_settings }}'
+    dconf_list: '{{ gnome_settings }}'
