--- a/roles/libreoffice/tasks/main.yml
+++ b/roles/libreoffice/tasks/main.yml
@@ -1,6 +1,12 @@
 ---
 - name: run package helper
   import_tasks: '{{ helper_path }}/package_apt.yml'
+  vars:
+    package_apt_list:
+      install:
+        - 'libreoffice-calc'
+        - 'libreoffice-writer'
+        - 'libreoffice-style-sifr'
 
 - name: run template helper
   import_tasks: '{{ helper_path }}/template.yml'
