--- a/roles/mpv/tasks/main.yml
+++ b/roles/mpv/tasks/main.yml
@@ -7,6 +7,11 @@
 
 - name: run package helper
   import_tasks: '{{ helper_path }}/package_apt.yml'
+  vars:
+    package_apt_list:
+      install_recommends: no
+      install:
+        - 'mpv'
 
 - name: run template helper
   import_tasks: '{{ helper_path }}/template.yml'
