--- a/roles/nvm/tasks/main.yml
+++ b/roles/nvm/tasks/main.yml
@@ -1,6 +1,11 @@
 ---
 - name: run package helper
   import_tasks: '{{ helper_path }}/package_apt.yml'
+  vars:
+    package_apt_list:
+      install:
+        - build-essential
+        - libssl-dev
 
 - name: run git_repo helper
   import_tasks: '{{ helper_path }}/git_repo.yml'
@@ -9,7 +14,7 @@
       - repo: 'git://github.com/creationix/nvm.git'
         dest: '{{ user_home }}/.nvm'
 
-- name: add alias
+- name: run alias helper
   import_tasks: '{{ helper_path }}/alias.yml'
 
 - name: install lts version of node
