--- a/roles/redshift/tasks/main.yml
+++ b/roles/redshift/tasks/main.yml
@@ -1,6 +1,10 @@
 ---
 - name: run package helper
   import_tasks: '{{ helper_path }}/package_apt.yml'
+  vars:
+    package_apt_list:
+      install:
+        - 'redshift-gtk'
 
 - name: run startup helper
   import_tasks: '{{ helper_path }}/startup.yml'
