--- a/roles/rsnapshot/tasks/main.yml
+++ b/roles/rsnapshot/tasks/main.yml
@@ -1,6 +1,10 @@
 ---
 - name: run package helper
   import_tasks: '{{ helper_path }}/package_apt.yml'
+  vars:
+    package_apt_list:
+      install:
+        - 'rsnapshot'
 
 - name: run template helper
   import_tasks: '{{ helper_path }}/template.yml'
@@ -8,7 +12,17 @@
     template_list:
       - src: 'rsnapshot.conf'
         dest: '{{ user_config }}/rsnapshot'
-        data: '{{ rsnapshot_points }}'
+        data:
+          - '{{ user_storage }}/archive/'
+          - '{{ user_storage }}/audiobook/'
+          - '{{ user_storage }}/book/'
+          - '{{ user_storage }}/dev/'
+          - '{{ user_storage }}/gym/'
+          - '{{ user_storage }}/music/'
+          - '{{ user_storage }}/picture/'
+          - '{{ user_storage }}/privacy/'
+          - '{{ user_storage }}/sync/'
+          - '{{ user_storage }}/video/'
 
 - name: run alias helper
   import_tasks: '{{ helper_path }}/alias.yml'
