--- a/roles/synaptic/tasks/main.yml
+++ b/roles/synaptic/tasks/main.yml
@@ -1,6 +1,10 @@
 ---
 - name: run package helper
   import_tasks: '{{ helper_path }}/package_apt.yml'
+  vars:
+    package_apt_list:
+      install:
+        - 'synaptic'
 
 - name: run copy helper
   import_tasks: '{{ helper_path }}/copy.yml'
