--- a/roles/thunderbird/tasks/main.yml
+++ b/roles/thunderbird/tasks/main.yml
@@ -1,7 +1,10 @@
 ---
 - name: run package helper
   import_tasks: '{{ helper_path }}/package_apt.yml'
-
+  vars:
+    package_apt_list:
+      install:
+        - 'thunderbird'
 
 - name: run copy helper
   import_tasks: '{{ helper_path }}/copy.yml'
