--- a/roles/youtube_dl/tasks/main.yml
+++ b/roles/youtube_dl/tasks/main.yml
@@ -1,6 +1,10 @@
 ---
 - name: run package helper
   import_tasks: '{{ helper_path }}/package_pip.yml'
+  vars:
+    package_pip_list:
+      install:
+        - 'youtube-dl'
 
 - name: run copy helper
   import_tasks: '{{ helper_path }}/copy.yml'
@@ -9,5 +13,5 @@
       - src: 'config'
         dest: '{{ user_config }}/youtube-dl'
 
-- name: add alias
+- name: run alias helper
   import_tasks: '{{ helper_path }}/alias.yml'
