--- a/roles/zsh_syntax_highlighting/tasks/main.yml
+++ b/roles/zsh_syntax_highlighting/tasks/main.yml
@@ -1,3 +1,7 @@
 ---
 - name: run package helper
   import_tasks: '{{ helper_path }}/package_apt.yml'
+  vars:
+    package_apt_list:
+      install:
+        - 'zsh-syntax-highlighting'
