move and rename helpers directory

--- a/helpers/shortcut.yml
+++ b/helpers/shortcut.yml
@@ -25,7 +25,7 @@
   loop: '{{ shortcut_list }}'
 
 - name: run dconf helper
-  import_tasks: '{{ helper_path }}/dconf.yml'
+  import_tasks: '{{ helpers }}/dconf.yml'
   vars:
     dconf_list:
       - '{{ shortcut_settings }}'
