--- a/hosts.yml
+++ b/hosts.yml
@@ -4,7 +4,7 @@ local:
   vars:
     ansible_connection: local
     ansible_python_interpreter: '{{ ansible_playbook_python }}'
-    helper_path: '{{ dotfiles_directory }}/service/helper'
+    helpers: '{{ dotfiles_directory }}/helpers'
     user_home: '{{ "$HOME" | expandvars }}'
     user_config: '{{ user_home }}/.config'
     user_storage: '/media/{{ ansible_user_id }}/storage'
