--- a/roles/albert/tasks/main.yml
+++ b/roles/albert/tasks/main.yml
@@ -1,26 +1,26 @@
 ---
 - name: run key helper
-  import_tasks: '{{ helper_path }}/key.yml'
+  import_tasks: '{{ helpers }}/key.yml'
   vars:
     key_list:
       - 'https://download.opensuse.org/repositories/home:manuelschneid3r/xUbuntu_18.04/Release.key'
 
 - name: run repo helper
-  import_tasks: '{{ helper_path }}/repo.yml'
+  import_tasks: '{{ helpers }}/repo.yml'
   vars:
     repo_list:
       - repo: 'deb https://download.opensuse.org/repositories/home:/manuelschneid3r/xUbuntu_18.04/ /'
         filename: 'home:manuelschneid3r'
 
 - name: run package helper
-  import_tasks: '{{ helper_path }}/package_apt.yml'
+  import_tasks: '{{ helpers }}/package_apt.yml'
   vars:
     package_apt_list:
       install:
         - 'albert'
 
 - name: run template helper
-  import_tasks: '{{ helper_path }}/template.yml'
+  import_tasks: '{{ helpers }}/template.yml'
   vars:
     template_list:
       - src: 'albert.conf'
@@ -35,7 +35,7 @@
           - '.debris'
 
 - name: run startup helper
-  import_tasks: '{{ helper_path }}/startup.yml'
+  import_tasks: '{{ helpers }}/startup.yml'
   vars:
     startup_list:
       name: 'albert'
