--- a/roles/bin/tasks/main.yml
+++ b/roles/bin/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: run package helper
-  import_tasks: '{{ helper_path }}/package_apt.yml'
+  import_tasks: '{{ helpers }}/package_apt.yml'
   vars:
     package_apt_list:
       install:
@@ -8,14 +8,14 @@
         - 'libvips42'
 
 - name: run package helper
-  import_tasks: '{{ helper_path }}/package_pip.yml'
+  import_tasks: '{{ helpers }}/package_pip.yml'
   vars:
     package_pip_list:
       install:
         - 'pyvips'
 
 - name: run link helper
-  import_tasks: '{{ helper_path }}/link.yml'
+  import_tasks: '{{ helpers }}/link.yml'
   vars:
     link_list:
       - src: '{{ dotfiles_roles }}/bin/files/bin'
