--- a/roles/chromium/tasks/main.yml
+++ b/roles/chromium/tasks/main.yml
@@ -1,5 +1,5 @@
 - name: run package helper
-  import_tasks: '{{ helper_path }}/package_apt.yml'
+  import_tasks: '{{ helpers }}/package_apt.yml'
   vars:
     package_apt_list:
       install_recommends: no
@@ -7,7 +7,7 @@
         - 'chromium-browser'
 
 - name: run template helper
-  import_tasks: '{{ helper_path }}/template.yml'
+  import_tasks: '{{ helpers }}/template.yml'
   vars:
     template_list:
       - src: 'Preferences'
