--- a/roles/cinnamon/tasks/applet.yml
+++ b/roles/cinnamon/tasks/applet.yml
@@ -1,6 +1,6 @@
 ---
 - name: applet | run tempfile helper
-  import_tasks: '{{ helper_path }}/tempfile.yml'
+  import_tasks: '{{ helpers }}/tempfile.yml'
   vars:
     tempfile_suffix: '.applets'
 
@@ -10,7 +10,7 @@
     dest: '{{ helper_tempfile_result.path }}'
 
 - name: applet | run stat helper
-  import_tasks: '{{ helper_path }}/stat.yml'
+  import_tasks: '{{ helpers }}/stat.yml'
   vars:
     path: '{{ helper_tempfile_result.path ~ "/" ~ item | default(None) }}'
     data: '{{ cinnamon_applets }}'
