--- a/roles/copyq/tasks/main.yml
+++ b/roles/copyq/tasks/main.yml
@@ -1,26 +1,26 @@
 ---
 - name: run repo helper
-  import_tasks: '{{ helper_path }}/repo.yml'
+  import_tasks: '{{ helpers }}/repo.yml'
   vars:
     repo_list:
       - repo: 'ppa:hluk/copyq'
 
 - name: run package helper
-  import_tasks: '{{ helper_path }}/package_apt.yml'
+  import_tasks: '{{ helpers }}/package_apt.yml'
   vars:
     package_apt_list:
       install:
         - 'copyq'
 
 - name: run template helper
-  import_tasks: '{{ helper_path }}/template.yml'
+  import_tasks: '{{ helpers }}/template.yml'
   vars:
     template_list:
       - src: 'copyq.conf'
         dest: '{{ user_config }}/copyq'
 
 - name: run startup helper
-  import_tasks: '{{ helper_path }}/startup.yml'
+  import_tasks: '{{ helpers }}/startup.yml'
   vars:
     startup_list:
       name: 'copyq'
