--- a/roles/firefox/tasks/main.yml
+++ b/roles/firefox/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: run package helper
-  import_tasks: '{{ helper_path }}/package_apt.yml'
+  import_tasks: '{{ helpers }}/package_apt.yml'
   vars:
     package_apt_list:
       install:
@@ -9,7 +9,7 @@
         - 'firefox-locale-en'
 
 - name: run shortcut helper
-  import_tasks: '{{ helper_path }}/shortcut.yml'
+  import_tasks: '{{ helpers }}/shortcut.yml'
   vars:
     shortcut_list:
       - name: "'firefox'"
@@ -17,7 +17,7 @@
         binding: "['<Super>F1']"
 
 - name: run template helper
-  import_tasks: '{{ helper_path }}/template.yml'
+  import_tasks: '{{ helpers }}/template.yml'
   vars:
     template_list:
       - src: 'profiles.ini'
