--- a/roles/font/tasks/main.yml
+++ b/roles/font/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: run package helper
-  import_tasks: '{{ helper_path }}/package_apt.yml'
+  import_tasks: '{{ helpers }}/package_apt.yml'
   vars:
     package_apt_list:
       install:
@@ -9,11 +9,11 @@
 
 - name: recreate directory
   block:
-    - import_tasks: '{{ helper_path }}/dir_remove.yml'
+    - import_tasks: '{{ helpers }}/dir_remove.yml'
       vars:
         path: '{{ font_dir }}'
 
-    - include_tasks: '{{ helper_path }}/dir_create.yml'
+    - include_tasks: '{{ helpers }}/dir_create.yml'
       vars:
         path: '{{ font_dir }}/{{ (item | basename | splitext)[0] }}'
       loop: '{{ font_list }}'
