--- a/roles/libreoffice/tasks/main.yml
+++ b/roles/libreoffice/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: run package helper
-  import_tasks: '{{ helper_path }}/package_apt.yml'
+  import_tasks: '{{ helpers }}/package_apt.yml'
   vars:
     package_apt_list:
       install:
@@ -9,7 +9,7 @@
         - 'libreoffice-style-sifr'
 
 - name: run template helper
-  import_tasks: '{{ helper_path }}/template.yml'
+  import_tasks: '{{ helpers }}/template.yml'
   vars:
     template_list:
       - src: 'javasettings_Linux_X86_64.xml'
