--- a/roles/megasync/tasks/main.yml
+++ b/roles/megasync/tasks/main.yml
@@ -1,26 +1,26 @@
 ---
 - name: run key helper
-  import_tasks: '{{ helper_path }}/key.yml'
+  import_tasks: '{{ helpers }}/key.yml'
   vars:
     key_list:
       - 'https://mega.nz/linux/MEGAsync/xUbuntu_18.04/Release.key'
 
 - name: run repo helper
-  import_tasks: '{{ helper_path }}/repo.yml'
+  import_tasks: '{{ helpers }}/repo.yml'
   vars:
     repo_list:
       - repo: 'deb https://mega.nz/linux/MEGAsync/xUbuntu_18.04/ ./'
         filename: 'megasync'
 
 - name: run package helper
-  import_tasks: '{{ helper_path }}/package_apt.yml'
+  import_tasks: '{{ helpers }}/package_apt.yml'
   vars:
     package_apt_list:
       install:
         - 'megasync'
 
 - name: run startup helper
-  import_tasks: '{{ helper_path }}/startup.yml'
+  import_tasks: '{{ helpers }}/startup.yml'
   vars:
     startup_list:
       name: 'megasync'
