--- a/roles/redshift/tasks/main.yml
+++ b/roles/redshift/tasks/main.yml
@@ -1,13 +1,13 @@
 ---
 - name: run package helper
-  import_tasks: '{{ helper_path }}/package_apt.yml'
+  import_tasks: '{{ helpers }}/package_apt.yml'
   vars:
     package_apt_list:
       install:
         - 'redshift-gtk'
 
 - name: run startup helper
-  import_tasks: '{{ helper_path }}/startup.yml'
+  import_tasks: '{{ helpers }}/startup.yml'
   vars:
     startup_list:
       name: 'redshift-gtk'
