--- a/roles/synaptic/tasks/main.yml
+++ b/roles/synaptic/tasks/main.yml
@@ -1,13 +1,13 @@
 ---
 - name: run package helper
-  import_tasks: '{{ helper_path }}/package_apt.yml'
+  import_tasks: '{{ helpers }}/package_apt.yml'
   vars:
     package_apt_list:
       install:
         - 'synaptic'
 
 - name: run copy helper
-  import_tasks: '{{ helper_path }}/copy.yml'
+  import_tasks: '{{ helpers }}/copy.yml'
   vars:
     copy_list:
       - src: 'synaptic.conf'
