--- a/roles/tor_browser/tasks/main.yml
+++ b/roles/tor_browser/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: run package helper
-  import_tasks: '{{ helper_path }}/package_apt.yml'
+  import_tasks: '{{ helpers }}/package_apt.yml'
   vars:
     package_apt_list:
       install_recommends: no
