--- a/roles/virtualbox/tasks/main.yml
+++ b/roles/virtualbox/tasks/main.yml
@@ -1,25 +1,25 @@
 ---
 - name: run key helper
-  import_tasks: '{{ helper_path }}/key.yml'
+  import_tasks: '{{ helpers }}/key.yml'
   vars:
     key_list:
       - 'https://www.virtualbox.org/download/oracle_vbox_2016.asc'
 
 - name: run repo helper
-  import_tasks: '{{ helper_path }}/repo.yml'
+  import_tasks: '{{ helpers }}/repo.yml'
   vars:
     repo_list:
       - repo: 'deb https://download.virtualbox.org/virtualbox/debian {{ ubuntu_codename }} contrib'
 
 - name: run package helper
-  import_tasks: '{{ helper_path }}/package_apt.yml'
+  import_tasks: '{{ helpers }}/package_apt.yml'
   vars:
     package_apt_list:
       install:
         - 'virtualbox-5.2'
 
 - name: run template helper
-  import_tasks: '{{ helper_path }}/template.yml'
+  import_tasks: '{{ helpers }}/template.yml'
   vars:
     template_list:
       - src: 'VirtualBox.xml'
