--- a/roles/wireguard/tasks/main.yml
+++ b/roles/wireguard/tasks/main.yml
@@ -1,16 +1,16 @@
 ---
 - name: run repo helper
-  import_tasks: '{{ helper_path }}/repo.yml'
+  import_tasks: '{{ helpers }}/repo.yml'
   vars:
     repo_list:
       - repo: 'ppa:wireguard/wireguard'
 
 - name: run package helper
-  import_tasks: '{{ helper_path }}/package_apt.yml'
+  import_tasks: '{{ helpers }}/package_apt.yml'
   vars:
     package_apt_list:
       install:
         - 'wireguard'
 
 - name: run alias helper
-  import_tasks: '{{ helper_path }}/alias.yml'
+  import_tasks: '{{ helpers }}/alias.yml'
