--- a/roles/youtube_dl/tasks/main.yml
+++ b/roles/youtube_dl/tasks/main.yml
@@ -1,17 +1,17 @@
 ---
 - name: run package helper
-  import_tasks: '{{ helper_path }}/package_pip.yml'
+  import_tasks: '{{ helpers }}/package_pip.yml'
   vars:
     package_pip_list:
       install:
         - 'youtube-dl'
 
 - name: run copy helper
-  import_tasks: '{{ helper_path }}/copy.yml'
+  import_tasks: '{{ helpers }}/copy.yml'
   vars:
     copy_list:
       - src: 'config'
         dest: '{{ user_config }}/youtube-dl'
 
 - name: run alias helper
-  import_tasks: '{{ helper_path }}/alias.yml'
+  import_tasks: '{{ helpers }}/alias.yml'
