--- a/vars.yml
+++ b/vars.yml
@@ -3,7 +3,7 @@
 dotfiles_directory: '{{ user_home }}/dotfiles'
 # dotfiles_roles: '{{ dotfiles_directory }}/roles'
 # git_protocol: 'git@github.com:in-in/dotfiles.git'
-helper_path: '{{ dotfiles_directory }}/service/helper'
+helpers: '{{ dotfiles_directory }}/helpers'
 # storage_ext_id: '12f3d18b-ce5f-4548-bf4e-4b1d1ca46f10'
 # storage_ext: '{{ user_home }}/storage_ext'
 # sync_directory: '{{ user_storage }}/sync'
