--- a/helpers/dir_create.yml
+++ b/helpers/dir_create.yml
@@ -1,5 +1,7 @@
 ---
 - name: helper | dir_create | create directory
   file:
-    path: '{{ path }}'
+    path: '{{ item }}'
     state: directory
+  when: item is not directory
+  loop: '{{ dir_create_data }}'
