--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,3 +1,4 @@
+---
 - name: run package helper
   import_tasks: '{{ helpers }}/package_apt.yml'
   vars:
@@ -51,3 +52,9 @@
         - 'image/x-bmp'
         - 'image/x-ico'
         - 'image/x-pcx'
+
+- name: run gitignore helper
+  import_tasks: '{{ helpers }}/gitignore.yml'
+  vars:
+    gitignore_data: "{{ lookup('template', 'gitignore') }}"
+  tags: 'common_gitignore'
